DPNG-9545 Adjust implementation to TAP NG requirements